fix: 배치, 인터렉티브 잡 생성